# hackathon-2-todo

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.local.yml
.claude/: settings.local.json
.claude/commands/: todo.crud.md  todo.setup.md  todo.test.md
.github/workflows/: build-and-test.yml  build-images.yml  deploy-oke.yml  rollback.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  5aad0ce77300_add_conversations_and_messages.py  7e2870cc7002_add_phase_v_schema_extensions.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/api/routes/: auth.py  chat.py  notifications.py  tasks.py
backend/src/chatkit/: __init__.py  server.py  store.py
backend/src/cli/: __init__.py  commands.py
backend/src/core/: __init__.py  config.py  database.py  security.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/models/: __init__.py  audit_log.py  conversation.py  message.py  notification.py  recurring_task_schedule.py  task.py  task_event.py  user.py
backend/src/schemas/: chat.py  error.py  notification.py  task.py  user.py
backend/src/services/: __init__.py  agent_service.py  auth_service.py  chat_service.py  event_publisher.py  notification_service.py  recurrence_service.py  task_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  conftest.py  test_auth.py  test_tasks.py
backend/tests/integration/: __init__.py  test_cli.py
backend/tests/unit/: __init__.py  test_task.py  test_task_service.py
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  FilterControls.tsx  SearchBar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  crypto-polyfill.ts
frontend/src/types/: index.ts
history/prompts/001-phase1-console/: 001-create-phase1-spec.spec.prompt.md  002-create-phase1-plan.plan.prompt.md  003-generate-task-breakdown.tasks.prompt.md  004-neon-database-decision.misc.prompt.md
infra/dapr/components/: kafka-pubsub.yaml  (+2 more)
infra/docker/: audit-service.Dockerfile  backend.Dockerfile  frontend.Dockerfile  notification-service.Dockerfile  recurring-tasks-service.Dockerfile
infra/kubernetes/: cert-manager-issuer.yaml
services/audit-service/: pyproject.toml
services/audit-service/src/: __init__.py  config.py  database.py  main.py  models.py
services/audit-service/src/consumers/: __init__.py  audit_event_consumer.py
services/notification-service/: pyproject.toml
services/notification-service/src/: __init__.py  config.py  database.py  main.py  models.py
services/notification-service/src/consumers/: __init__.py  task_event_consumer.py
services/recurring-tasks-service/: pyproject.toml
services/recurring-tasks-service/src/: __init__.py  config.py  database.py  main.py  models.py
services/recurring-tasks-service/src/scheduler/: __init__.py  task_scheduler.py
specs/001-phase1-console/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase3-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase4-kubernetes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-phase5-cloud-event-driven/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/intelligence/: phase-1-skills.md
(+53 files in other folders)
