[project]
name = "audit-service"
version = "2.0.0"
description = "Phase V Audit Service - Consumes all events and creates audit logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dapr-ext-grpc>=1.12.0",
    "aiokafka>=0.10.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
